// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`speak renders 0 1`] = `
Array [
  .c0 {
  speak: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders function 1`] = `
Array [
  .c0 {
  speak: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak: has;
}

<div
    className="c0"
  />,
  .c0 {
  speak: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak: has;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders invalid theme path 1`] = `
Array [
  .c0 {
  speak: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders negative number 1`] = `
Array [
  .c0 {
  speak: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  speak: July;
}

@media screen and (min-width:November) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speak: July;
}

@media screen and (min-width:November) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speak: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speak: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    speak: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    speak: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  speak: July;
}

@media May {
  .c0 {
    speak: August;
  }
}

@media April {
  .c0 {
    speak: September;
  }
}

@media January {
  .c0 {
    speak: November;
  }
}

@media April {
  .c0 {
    speak: August;
  }
}

@media June {
  .c0 {
    speak: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speak: July;
}

@media May {
  .c0 {
    speak: August;
  }
}

@media April {
  .c0 {
    speak: September;
  }
}

@media January {
  .c0 {
    speak: November;
  }
}

@media April {
  .c0 {
    speak: August;
  }
}

@media June {
  .c0 {
    speak: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speak: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak: November;
  }
}

@media April {
  .c0 {
    speak: January;
  }
}

@media January {
  .c0 {
    speak: December;
  }
}

@media April {
  .c0 {
    speak: April;
  }
}

@media June {
  .c0 {
    speak: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speak: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak: November;
  }
}

@media April {
  .c0 {
    speak: January;
  }
}

@media January {
  .c0 {
    speak: December;
  }
}

@media April {
  .c0 {
    speak: April;
  }
}

@media June {
  .c0 {
    speak: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    speak: July;
  }
}

@media April {
  .c0 {
    speak: August;
  }
}

@media January {
  .c0 {
    speak: September;
  }
}

@media April {
  .c0 {
    speak: November;
  }
}

@media June {
  .c0 {
    speak: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    speak: July;
  }
}

@media April {
  .c0 {
    speak: August;
  }
}

@media January {
  .c0 {
    speak: September;
  }
}

@media April {
  .c0 {
    speak: November;
  }
}

@media June {
  .c0 {
    speak: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak: January;
  }
}

@media April {
  .c0 {
    speak: December;
  }
}

@media January {
  .c0 {
    speak: April;
  }
}

@media April {
  .c0 {
    speak: May;
  }
}

@media June {
  .c0 {
    speak: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak: January;
  }
}

@media April {
  .c0 {
    speak: December;
  }
}

@media January {
  .c0 {
    speak: April;
  }
}

@media April {
  .c0 {
    speak: May;
  }
}

@media June {
  .c0 {
    speak: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders postitive number 1`] = `
Array [
  .c0 {
  speak: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders string 1`] = `
Array [
  .c0 {
  speak: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak: June;
}

<div
    className="c0"
  />,
  .c0 {
  speak: June;
}

<div
    className="c0"
  />,
]
`;

exports[`speak renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`speak renders valid theme path 1`] = `
Array [
  .c0 {
  speak: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
